syntax = "proto3";

package poktroll.application;

option go_package = "poktroll/x/application/types";

// Msg defines the Msg service.
service Msg {
  rpc StakeApplication   (MsgStakeApplication  ) returns (MsgStakeApplicationResponse  );
  rpc UnstakeApplication (MsgUnstakeApplication) returns (MsgUnstakeApplicationResponse);
}
message MsgStakeApplication {
  string address = 1;
}

message MsgStakeApplicationResponse {}

message MsgUnstakeApplication {
  string address = 1;
}

message MsgUnstakeApplicationResponse {}

