syntax = "proto3";
package poktroll.poktroll;

import "gogoproto/gogo.proto";

option go_package = "poktroll/x/poktroll/types";

message StakeInfo {
  string address = 1; // address of the staker (bech32 prefixed)
  string coinsStaked = 2; // coins staked
}

// Custom parameters for each actor
message WatcherParams {
  string watcher_specific_param = 1;
}

message PortalParams {
  string portal_specific_param = 1;
}

message ServicerParams {
  string servicer_specific_param = 1;
}

message ApplicationParams {
  string application_specific_param = 1;
}

// Actor definitions
message Watcher {
  StakeInfo stake_info = 1;
  WatcherParams watcher_params = 2;
}

message Portal {
  StakeInfo stake_info = 1;
  PortalParams portal_params = 2;
}

message Servicer {
  StakeInfo stake_info = 1;
  ServicerParams servicer_params = 2;
}

message Application {
  StakeInfo stake_info = 1;
  ApplicationParams application_params = 2;
}

// Wrapping all actors in one message for potential use cases
message Actor {
  oneof actor_type {
      Watcher watcher = 1;
      Portal portal = 2;
      Servicer servicer = 3;
      Application application = 4;
  }
}